<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_background"

        android:layout_marginVertical="@dimen/margin_8dp"
       >

        <View
            android:id="@+id/bottomSheetHandle"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:text="@string/_6_scheduled_visit"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomSheetHandle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/place_icon_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            app:cardBackgroundColor="@color/card_gray"
            app:cardCornerRadius="@dimen/margin_17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/place_name_tv">

            <ImageView
                android:layout_width="@dimen/margin_42dp"
                android:layout_height="@dimen/margin_24dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/image_des"
                android:src="@drawable/location_icon" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/place_name_tv"
            style="@style/NormalBoldText"
            android:layout_marginStart="@dimen/margin_16dp"
            android:elevation="10dp"
            android:text="@string/jacks_rolent_stree"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/place_icon_Iv"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/schedule_time_tv"
            style="@style/FaintText"
            android:elevation="10dp"
            android:letterSpacing="0.1"
            android:text="@string/_7_45am"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/place_name_tv"
            app:layout_constraintTop_toBottomOf="@+id/place_name_tv" />

        <TextView
            android:id="@+id/address_tv"
            style="@style/FaintText"
            android:elevation="10dp"
            android:letterSpacing="0.1"
            android:text="@string/_7_express_way_lagos"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/schedule_time_tv"
            app:layout_constraintTop_toBottomOf="@+id/schedule_time_tv" />

        <androidx.cardview.widget.CardView
            android:id="@+id/status_CV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:layout_marginBottom="@dimen/margin_12dp"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            app:cardBackgroundColor="#D8D8D8"
            app:cardCornerRadius="@dimen/margin_17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/address_tv"
            app:layout_constraintTop_toBottomOf="@+id/address_tv">


            <TextView
                android:id="@+id/status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/not_stated"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="@dimen/margin_54dp"
            android:layout_height="@dimen/margin_40dp"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/image_des"
            android:src="@drawable/arrow_down_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>